--- a/Tee-Time-Skeleton/views/layout.pug
+++ b/Tee-Time-Skeleton/views/layout.pug
@@ -1,8 +1,25 @@
 doctype html
 html
+  
   head
       block head
-        title="Express Starter App"
+        title= TeeTime
         link(rel='stylesheet' href='/stylesheets/reset.css')
+        link(rel='stylesheet' href='/stylesheets/layout.css')
+  
   body
+    header.header
+      .header__logo: a(href='/') TeeTime
+      .header__nav
+        a(href='/courses') Courses
+        a(href='/tee-times') TeeTimes
+        a(href='/login') Sign In
+        a(href='/signup') Sign Up
+    main
+
     block content
+
+
+    footer
+      .footer__github-logo
+        img(src='https://clipart.info/images/ccovers/1499794873github-logo-png.png')
