--- a/Tee-Time-Skeleton/views/signup.pug
+++ b/Tee-Time-Skeleton/views/signup.pug
@@ -7,7 +7,11 @@ block content
     input(type='hidden' name='_csrf' value=csrfToken)
     input(type='text' name='firstName' placeholder='First Name')
     input(type='text' name='lastName' placeholder='Last Name')
+    input(type='text' name='age' placeholder='Age')
+    input(type='text' name='bio' placeholder='Bio')
+    input(type='integer' name='handicap' placeholder='Handicap')
+    input(type='text' name='user' placeholder='Username')
     input(type='text' name='email' placeholder='Email Address')
-    input(type='password' name='password' placeholder='Password')
+    input(type='password' name='hashedPassword' placeholder='Password')
     div(class='submit')
       button(type='submit' class='submit-button') Submit
