pug adjusted/still needs link to DB

--- a/Tee-Time-Skeleton/views/signup.pug
+++ b/Tee-Time-Skeleton/views/signup.pug
@@ -9,6 +9,7 @@ block content
     input(type='text' name='lastName' placeholder='Last Name')
     input(type='text' name='age' placeholder='Age')
     input(type='text' name='bio' placeholder='Bio')
+    input(type='text' name='city' placeholder='City')
     input(type='integer' name='handicap' placeholder='Handicap')
     input(type='text' name='user' placeholder='Username')
     input(type='text' name='email' placeholder='Email Address')
