--- a/Tee-Time-Skeleton/views/signup.pug
+++ b/Tee-Time-Skeleton/views/signup.pug
@@ -13,9 +13,9 @@ block content
     //-   each city in cities
     //-     option(value="city.id") city.name
     input(type='number' name='handicap' placeholder='Handicap' value=user.handicap)
-    input(type='text' name='user' placeholder='Username' value=user.username)
+    input(type='text' name='username' placeholder='Username' value=user.username)
     input(type='email' name='email' placeholder='Email Address')
-    input(type='password' name='hashedPassword' placeholder='Password')
-    input(type='password' name ='hashedPassword' placeholder = 'Confirm Password')
+    input(type='password' name='password' placeholder='Password')
+    input(type='password' name ='confirmPassword' placeholder = 'Confirm Password')
     div(class='submit')
       button(type='submit' class='submit-button') Submit
