--- a/Tee-Time-Skeleton/views/layout.pug
+++ b/Tee-Time-Skeleton/views/layout.pug
@@ -3,7 +3,7 @@ html
   
   head
       block head
-        title= TeeTime #{title}
+        title= TeeTime
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/layout.css')
   
