--- a/Tee-Time-Skeleton/views/layout.pug
+++ b/Tee-Time-Skeleton/views/layout.pug
@@ -24,5 +24,5 @@ html
 
 
     footer
-      .footer__github-logo
-        img(src='https://clipart.info/images/ccovers/1499794873github-logo-png.png')
+      //- .footer__github-logo
+      //-   img(src='https://clipart.info/images/ccovers/1499794873github-logo-png.png')
