--- a/Tee-Time-Skeleton/public/stylesheets/layout.css
+++ b/Tee-Time-Skeleton/public/stylesheets/layout.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Helvetica Neue', 'Helvetica', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #f5f5f5;
   color: #464646;
 }
@@ -8,10 +8,12 @@
   background-color: rgb(3, 71, 3);
   font-size: 16px;
   line-height: 30px;
+  height: 50px;
   padding: 4px;
   color: white;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 .header-nav__group {
@@ -21,18 +23,23 @@
   padding: 2px;
 }
 
-.header-nav__logo {
-
+.header-nav__logo > a > div {
+  font-family: 'Architects Daughter', cursive;
+  font-size: 40px;
 }
-
 
 .footer__github-logo img {
   width: 100px;
 }
 
 .banner__container {
-  background-color:forestgreen;
+  background-color:rgba(34, 139, 34, 0.7);
   padding: 32px;
+  height: 450px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* z-index: 1 */
 }
 
 .banner__text {
@@ -41,13 +48,13 @@
   max-width: 650px;
   text-align: center;
 }
-
-.banner__image {
-}
+/* 
+.banner__container--underlay {
+  background-image: url('https://thehighlandsgc.com/wp-content/uploads/2020/03/highlandshomeheader1-1500x630.jpg');
+} */
 
 a > span:hover,
 a:hover {
-  color: rgb(255, 115, 0);
+  color: forestgreen;
   font-weight: 700;
 }
-git add
