--- a/Tee-Time-Skeleton/views/layout.pug
+++ b/Tee-Time-Skeleton/views/layout.pug
@@ -6,6 +6,10 @@ html
         title= TeeTime
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/layout.css')
+        link(href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet")
+
+
         
 
   body
@@ -31,12 +35,13 @@ html
             div(class="header-nav__link-sign-up") Sign Up
 
     .banner__container
-      .banner__text
-        h1 Golfing is a great way to make new friends
-          div
-          span but you wont find that out playing alone.
-        a(href='/' class="header-banner__button-link") Let's Play
-    main
+      .banner__container--underlay
+        .banner__text
+          h1 Golfing is a great way to make new friends
+            div
+            span but you wont find that out playing alone.
+          a(href='/' class="header-banner__button-link") Let's Play
+
     block content
 
 
