--- a/Tee-Time-Skeleton/public/stylesheets/layout.css
+++ b/Tee-Time-Skeleton/public/stylesheets/layout.css
@@ -8,7 +8,7 @@
   background-color: rgb(3, 71, 3);
   font-size: 16px;
   line-height: 30px;
-  height: 50px;
+  height: 80px;
   padding: 4px;
   color: white;
   display: flex;
@@ -33,13 +33,11 @@
 }
 
 .banner__container {
-  background-color:rgba(34, 139, 34, 0.7);
-  padding: 32px;
+  background-color:rgb(34, 139, 34);
   height: 450px;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* z-index: 1 */
 }
 
 .banner__text {
@@ -47,11 +45,38 @@
   margin: 0 auto;
   max-width: 650px;
   text-align: center;
+  color: white;
 }
-/* 
+
+.banner__text h1 {
+  color: white;
+  font-size: 40px;
+}
+
+.banner__text div {
+  color: white;
+  font-size: 20px;
+}
+
+.banner__text a {
+  border: 2px solid rgb(34, 139, 34);
+  padding: 7px 12px;
+  border-radius: 4px;
+}
+
+.banner a:hover {
+  background-color: forestgreen;
+}
+
 .banner__container--underlay {
+  height: 450px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-image: url('https://thehighlandsgc.com/wp-content/uploads/2020/03/highlandshomeheader1-1500x630.jpg');
-} */
+  opacity: 0.4;
+}
 
 a > span:hover,
 a:hover {
