--- a/Tee-Time-Skeleton/views/index.pug
+++ b/Tee-Time-Skeleton/views/index.pug
@@ -1,5 +1,7 @@
 extends layout
 
+include utils.pug
+
 append head
   //- add page specific styles by appending to the head
   link(rel="stylesheet" href="/stylesheets/index.css")
@@ -7,5 +9,11 @@ append head
   script(src="/javascripts/index.js" type="module" defer)
 
 block content
+  +banner(
+    'Golfing is a great way to make new friends',
+    'but you wont find that out playing alone.',
+    "Let's Play"
+    )
+
   h1= title
   p Welcome to your Project Skeleton
