--- a/Tee-Time-Skeleton/views/utils.pug
+++ b/Tee-Time-Skeleton/views/utils.pug
@@ -6,7 +6,19 @@ mixin validationErrorSummary(errors)
         each error in errors
           li= error
 
+
 mixin field(labelText, fieldName, fieldValue, fieldType = 'text')
   div(class='form-group')
     label(for=fieldName)= labelText
     input(type='text' id=fieldName name=fieldName value=fieldValue class='form-control')
+
+
+mixin banner(headline, subtext, link)
+  .banner__container
+    .banner__container--underlay
+      .banner__text
+        h1= headline
+        br
+        div= subtext
+        br
+        a(href='/' class="header-banner__button-link")= link
