index almost done

--- a/Tee-Time-Skeleton/public/stylesheets/index.css
+++ b/Tee-Time-Skeleton/public/stylesheets/index.css
@@ -1,3 +1,111 @@
 h1 {
-    color: #555555;
+  color: #fafafa;
+}
+button {
+  background-color: goldenrod;
+  border-color: goldenrod;
+  border: 2px solid goldenrod;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 600;
+  border-radius: 10px;
+  font-size: 18px;
+  width: 50%;
+  display: inline;
+  padding: 1em 1.5em;
+}
+
+.banner {
+  background-image: linear-gradient(
+      rgba(34, 139, 34, 0.3),
+      rgba(34, 139, 34, 0.3)
+    ),
+    url(https://www.discoverybaygolfcourse.com/wp-content/uploads/sites/5191/2015/07/slide2.jpg);
+  padding: 32px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: auto;
+  height: 400px;
+}
+
+.banner__text {
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 650px;
+  text-align: center;
+}
+.banner__text > h1 {
+  font-weight: 600;
+  margin-bottom: 9px;
+  font-size: 2.5em;
+  margin: 0;
+}
+
+.banner__text-subtext {
+  margin-bottom: 36px;
+  display: block;
+  font-size: 0.65em;
+  font-weight: 400;
+}
+
+.banner__container {
+  display: flex;
+  padding: 110px 0;
+  align-items: center;
+  flex-direction: row;
+  background-color: rgba(34, 139, 34, 0);
+}
+.page {
+  background-color: rgb(2, 24, 5);
+  width: 100%;
+  text-align: center;
+  padding: 2em 1em;
+  margin-bottom: 3em;
+}
+
+.page__container {
+  background-color: rgb(2, 24, 5);
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+  padding: 0 1em;
+  max-width: 1020px;
+  text-align: center;
+}
+
+.page__text {
+  background-color: rgb(2, 24, 5);
+  float: left;
+  display: block;
+  margin-right: 2.35%;
+  width: 31.76%;
+  margin-bottom: 0;
+  text-align: center;
+  line-height: 1.625;
+}
+
+.page__text-last {
+  background-color: rgb(2, 24, 5);
+  margin-right: 0;
+  margin: 0;
+  float: left;
+  display: block;
+  width: 31.76%;
+  text-align: center;
+  line-height: 1.625;
+}
+
+.page__text-h2 {
+  margin-bottom: 9px;
+  color: skyblue;
+  line-height: 1.25;
+  font-weight: 600;
+  margin: 0;
+  text-align: center;
+}
+
+.page__text-subtext {
+    background-color: rgb(2, 24, 5);
+  margin: 0;
+  text-align: center;
 }
