--- a/Tee-Time-Skeleton/views/index.pug
+++ b/Tee-Time-Skeleton/views/index.pug
@@ -7,5 +7,22 @@ append head
   script(src="/javascripts/index.js" type="module" defer)
 
 block content
-  h1= title
-  p Welcome to your Project Skeleton
+  .banner
+    .banner__container
+        .banner__text
+          h1 Golfing is a great way to make new friends
+            div
+            span(class='banner__text-subtext') but you wont find that out playing alone.
+            a(href='/' class="header-banner__button-link")
+              button(type ='submit' class="header-banner__button-link") Let's Play
+  .page
+    .page__container
+      .page__text
+        h2(class='page_text-h2') Show up for a Tee Time
+        p(class='page__text-subtext') Welcome to your Project Skeleton
+      .page__text
+        h2(class='page_text-h2') Enjoy real golf
+        p(class='page__text-subtext')
+      .page__text-last
+        h2(class='page_text-h2') See what happens
+        p(class='page__text-subtext')
