--- a/Tee-Time-Skeleton/public/stylesheets/index.css
+++ b/Tee-Time-Skeleton/public/stylesheets/index.css
@@ -25,7 +25,7 @@ button {
   background-size: cover;
   background-repeat: no-repeat;
   margin: auto;
-  height: 400px;
+  height: 500px;
 }
 
 .banner__text {
@@ -64,6 +64,7 @@ button {
 }
 
 .page__container {
+  min-height: 85px;
   background-color: rgb(2, 24, 5);
   margin-left: auto;
   margin-right: auto;
@@ -105,7 +106,7 @@ button {
 }
 
 .page__text-subtext {
-    background-color: rgb(2, 24, 5);
+  background-color: rgb(2, 24, 5);
   margin: 0;
   text-align: center;
 }
