finished course profile pictures

--- a/Tee-Time-Skeleton/views/courses-profile.pug
+++ b/Tee-Time-Skeleton/views/courses-profile.pug
@@ -1,5 +1,29 @@
 extends layout.pug
 
+include utils.pug
+
+append head
+  link(rel='stylesheet' href='/stylesheets/courses-profile.css')
+  link(href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet")
+
 block content
-  h2= title
-  //-- course data below --
+  +banner(
+    `${course.name}`,
+    null,
+    "Create TeeTime"
+  )
+  .course-profile-container
+    h2 Welcome to #{course.name}
+  .course-grid-container
+    .course-profile-description-container
+      h2= course.description
+    .course-profile-picture
+      img(src='https://dtt3egpp7rvvz.cloudfront.net/content/uploads/2018/04/16151641/crans-sur-sierre-e1523884629576.jpg')
+    .course-profile-info-div
+      .course-profile-difficulty
+        h3 Course Difficulty: #{course.difficulty}
+      .course-profile-price-range
+        h3 Price Range: $#{course.minPrice}-$#{course.maxPrice} 
+    .course-profile-button
+      button Create Event
+  
