--- a/Tee-Time-Skeleton/views/courses-splash.pug
+++ b/Tee-Time-Skeleton/views/courses-splash.pug
@@ -9,6 +9,7 @@ block content
   +banner(
     'Play at any one of our fine courses.',
     null,
+    "/tee-times",
     'See upcoming TeeTimes'
   )
 
