--- a/Tee-Time-Skeleton/public/stylesheets/layout.css
+++ b/Tee-Time-Skeleton/public/stylesheets/layout.css
@@ -51,6 +51,7 @@ footer {
 h1 {
   color: #fafafa;
 }
+
 button {
   background-color: goldenrod;
   border-color: goldenrod;
@@ -60,9 +61,9 @@ button {
   font-weight: 600;
   border-radius: 10px;
   font-size: 18px;
-  width: 50%;
+  max-width: 300px;
   display: inline;
-  padding: 1em 1.5em;
+  padding: 15px 20px;
 }
 
 button:hover {
@@ -74,11 +75,6 @@ button:hover {
   text-transform: uppercase;
 }
 .banner {
-  /* background-image: linear-gradient(
-      rgba(34, 139, 34, 0.3),
-      rgba(34, 139, 34, 0.3)
-    ),
-    url(https://www.discoverybaygolfcourse.com/wp-content/uploads/sites/5191/2015/07/slide2.jpg); */
   padding: 32px;
   background-size: cover;
   background-repeat: no-repeat;
