--- a/Tee-Time-Skeleton/public/stylesheets/layout.css
+++ b/Tee-Time-Skeleton/public/stylesheets/layout.css
@@ -1,6 +1,7 @@
 * {
   font-family: 'Montserrat', sans-serif;
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
+  background-color: rgba(58, 241, 58, 0.12);
   color: #464646;
 }
 
@@ -53,9 +54,9 @@ h1 {
 }
 
 button {
-  background-color: goldenrod;
-  border-color: goldenrod;
-  border: 2px solid goldenrod;
+  background-color: rgb(255, 162, 0);
+  border-color: rgb(255, 162, 0);
+  border: 2px solid rgb(255, 162, 0);
   color: white;
   text-transform: uppercase;
   font-weight: 600;
@@ -67,10 +68,10 @@ button {
 }
 
 button:hover {
-  background-color: rgb(255, 162, 0);
-  border-color: rgb(255, 162, 0);
-  border: 2px solid rgb(255, 162, 0);
-  box-shadow: 0 0 3px 2px rgb(255, 162, 0);
+  background-color: rgb(255, 115, 0);
+  border-color: rgb(255, 115, 0);
+  border: 2px solid rgb(255, 115, 0);
+  box-shadow: 0 0 3px 2px rgb(255, 115, 0);
   color: white;
   text-transform: uppercase;
 }
@@ -83,7 +84,9 @@ button:hover {
 }
 
 .banner__text {
+  display: flex;
   flex-direction: column;
+  align-items: center;
   margin: 0 auto;
   max-width: 650px;
   text-align: center;
@@ -98,8 +101,9 @@ button:hover {
 .banner__text-subtext {
   margin-bottom: 36px;
   display: block;
-  font-size: 0.65em;
+  font-size: 20px;
   font-weight: 400;
+  color: white
 }
 
 .banner__container {
