--- a/Tee-Time-Skeleton/views/signup.pug
+++ b/Tee-Time-Skeleton/views/signup.pug
@@ -1,26 +1,45 @@
 extends layout.pug 
 
-block content
-  h2 Join for a tee time
-  h3 1000s of strangers across the world have come together to enjoy the sport of golf. Create an account and you'll be on your way to being a part of the community.
+include utils.pug
 
-  if errors
-    each error in errors
-      .error= error
-      
-  form(action='/signup' method='POST')
-    input(type='hidden' name='_csrf' value=csrfToken)
-    input(type='text' name='firstName' placeholder='First Name' value=user.firstName)
-    input(type='text' name='lastName' placeholder='Last Name' value=user.lastName)
-    input(type='number' name='age' placeholder='Age' value=user.age)
-    textarea(name='bio' placeholder='Bio' value=user.bio)
-    select(name='cityId')
-      each city in cities
-        option(value=city.id)= city.name
-    input(type='number' name='handicap' placeholder='Handicap' value=user.handicap)
-    input(type='text' name='username' placeholder='Username' value=user.username)
-    input(type='email' name='email' placeholder='Email Address')
-    input(type='password' name='password' placeholder='Password')
-    input(type='password' name ='confirmPassword' placeholder = 'Confirm Password')
-    div(class='submit')
-      button(type='submit' class='submit-button') Submit
+append head
+  link(rel='stylesheet' href='/stylesheets/signup.css')
+
+block content
+  +banner(
+    'Sign Up to Start Playing',
+    '1000s of strangers across the world have come together to enjoy the sport of golf.',
+    '/',
+    null
+  )
+
+  main
+    br
+    .error-container
+      if errors
+        ul
+        each error in errors
+          li.error= error
+  
+    br
+    .form-container
+      form(action='/signup' method='POST' class='signup__form')
+        input(type='hidden' name='_csrf' value=csrfToken)
+        input(type='text' name='firstName' placeholder='First Name' value=user.firstName)
+        input(type='text' name='lastName' placeholder='Last Name' value=user.lastName)
+        input(type='number' name='age' placeholder='Age' value=user.age)
+        textarea(name='bio' placeholder='Bio' value=user.bio)
+        select(name='cityId')
+          option(value='') -- please select a city --
+          each city in cities
+            option(value=city.id)= city.name
+        input(type='number' name='handicap' placeholder='Handicap' value=user.handicap)
+        input(type='text' name='username' placeholder='Username' value=user.username)
+        input(type='email' name='email' placeholder='Email Address')
+        input(type='password' name='password' placeholder='Password')
+        input(type='password' name ='confirmPassword' placeholder = 'Confirm Password')
+        br
+        div(class='submit')
+          button(type='submit' class='submit-button') Submit
+        div
+          p: a(href='/login') Already have an account?
