comlpete signup styling

--- a/Tee-Time-Skeleton/views/signup.pug
+++ b/Tee-Time-Skeleton/views/signup.pug
@@ -28,7 +28,7 @@ block content
         input(type='text' name='firstName' placeholder='First Name' value=user.firstName)
         input(type='text' name='lastName' placeholder='Last Name' value=user.lastName)
         input(type='number' name='age' placeholder='Age' value=user.age)
-        textarea(name='bio' placeholder='Bio' value=user.bio)
+        textarea(name='bio' placeholder='Tell us about yourself' value=user.bio)
         select(name='cityId')
           option(value='') -- please select a city --
           each city in cities
