--- a/Tee-Time-Skeleton/public/stylesheets/signup.css
+++ b/Tee-Time-Skeleton/public/stylesheets/signup.css
@@ -6,7 +6,7 @@
 .signup__form {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
   border-radius: 8px;
   padding: 25px 40px;
@@ -16,11 +16,17 @@
 form input,
 textarea,
 select {
-  margin: 5px;
-  height: 45px;
+  margin: 8px;
+  height: 50px;
   border-radius: 7px;
   border: 2px solid black;
   background-color: rgb(255, 235, 165);
+  font-size: 1.3em;
+  color: black;
+}
+
+form textarea {
+  height: 100px;
 }
 
 form.submit {
@@ -57,4 +63,14 @@ form > div {
   left: 65px;
   text-align: left;
   line-height: 30px;;
+}
+
+::placeholder {
+  /* font-size: 1.3em; */
+  color: black
+}
+
+select {
+  color: black;
+  font-size: 1em;
 }
