--- a/Tee-Time-Skeleton/public/stylesheets/layout.css
+++ b/Tee-Time-Skeleton/public/stylesheets/layout.css
@@ -23,6 +23,10 @@
   padding: 2px;
 }
 
+.header-nav__group > a > div {
+  font-weight: 700;
+}
+
 .header-nav__logo > a > div {
   font-family: 'Architects Daughter', cursive;
   font-size: 40px;
@@ -35,27 +39,40 @@ footer {
 }
 
 .footer-container {
-  max-width: 1020px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   box-sizing: border-box;
   padding: 0 1em;
+
 }
 .footer-container__text {
-  float: left;
-  display: block;
-  /* margin-right: 2.3576520234%; */
-  width: 82.9403913294%;
-  margin-left: 8.5298043353%;
+  display: flex;
+  width: 100%;
 }
 
 .footer-container__links {
   text-align: left;
+  margin: 20px;
 }
 
 .footer-container__links a {
   display: block;
-  padding: 2px;
+  padding: 20px;
+  color: black;
+  font-weight: 700;
+}
+
+.footer-container__ethos {
+  display: flex;
+  margin-right: 0;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  text-align: left;
+  line-height: 1.5em;
+  width: 700px;
+  overflow: hidden;
 }
 
 .footer__github-logo img {
@@ -130,6 +147,7 @@ button:hover {
   display: block;
   font-size: 0.65em;
   font-weight: 400;
+  color: rgb(0, 0, 0);
 }
 
 .banner__container {
