--- a/Tee-Time-Skeleton/views/courses-profile.pug
+++ b/Tee-Time-Skeleton/views/courses-profile.pug
@@ -19,7 +19,8 @@ block content
     .course-profile-description-container
       h2= course.description
     .course-profile-picture
-      img(src='https://dtt3egpp7rvvz.cloudfront.net/content/uploads/2018/04/16151641/crans-sur-sierre-e1523884629576.jpg')
+      //- img(src='https://dtt3egpp7rvvz.cloudfront.net/content/uploads/2018/04/16151641/crans-sur-sierre-e1523884629576.jpg')
+      img(src=`/images/courses/${course.imgPath}`) 
     .course-profile-info-div
       .course-profile-difficulty
         h3 Course Difficulty: #{course.difficulty}
