--- a/Tee-Time-Skeleton/views/users-profile.pug
+++ b/Tee-Time-Skeleton/views/users-profile.pug
@@ -23,7 +23,7 @@ block content
     .user-profile-age
       h2 Your Age: #{user.age}
     .user-profile-bio
-      h2 Your Bio: #{user.bio}
+      h2 Bio: #{user.bio}
     .user-profile-stats
       h2 Your Stats:
     .user-profile-handicap
