removed some text from home page

--- a/Tee-Time-Skeleton/views/index.pug
+++ b/Tee-Time-Skeleton/views/index.pug
@@ -19,7 +19,7 @@ block content
     .page__container
       .page__text
         h2(class='page_text-h2') Show up for a Tee Time
-        p(class='page__text-subtext') Welcome to your Project Skeleton
+        //- p(class='page__text-subtext') Welcome to your Project Skeleton
       .page__text
         h2(class='page_text-h2') Enjoy real golf
         p(class='page__text-subtext')
