--- a/Tee-Time-Skeleton/public/stylesheets/tee-times.css
+++ b/Tee-Time-Skeleton/public/stylesheets/tee-times.css
@@ -1,5 +1,3 @@
-@import 'signup.css';
-
 .banner {
   background-image: linear-gradient(
       rgba(52, 229, 241, 0.25),
@@ -8,7 +6,6 @@
     url(https://www.discoverybaygolfcourse.com/wp-content/uploads/sites/5191/2015/07/slide2.jpg);
 }
 
-.form-container {
-  max-width: 750px;
-  margin: 0 auto;
+.header-banner__button-link {
+  visibility: hidden;
 }
