--- a/Tee-Time-Skeleton/views/utils.pug
+++ b/Tee-Time-Skeleton/views/utils.pug
@@ -23,3 +23,4 @@ mixin banner(headline, subtext, href, linkText)
         br
         a(href=href class="header-banner__button-link")
           button(type ='submit' class="header-banner__button-link")= linkText
+        block 
