--- a/Tee-Time-Skeleton/public/stylesheets/layout.css
+++ b/Tee-Time-Skeleton/public/stylesheets/layout.css
@@ -169,6 +169,7 @@ button:hover {
   border: 2px solid honeydew;
   text-transform: uppercase;
   padding: 5px 12px;
+  border-radius: 7px;
 }
 
 #special-button:hover {
