--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1,7 +1,8 @@
 * {
   font-family: 'Montserrat', sans-serif;
-  /* background-color: #f5f5f5; */
-  background-color: rgba(58, 241, 58, 0.12);
+  background-color: honeydew;
+  /* background-color: rgba(58, 241, 58, 0.12); */
+
   color: #464646;
 }
 
