workin on tee-times-create

--- a/views/tee-times.pug
+++ b/views/tee-times.pug
@@ -10,7 +10,9 @@ include utils.pug
 block content
   +banner(
     'Find a TeeTime near you',
-    'start meeting new golf partners'
+    'start meeting new golf partners',
+    '/tee-times/create',
+    'Create A New TeeTime'
   )
   
   if teeTimes
