--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -123,6 +123,7 @@ button:hover {
   box-shadow: 0 0 3px 2px rgb(255, 115, 0);
   color: white;
   text-transform: uppercase;
+  transform: translateY(-1px);
 }
 .banner {
   padding: 32px;
@@ -168,8 +169,9 @@ button:hover {
   background-color:honeydew;
   border: 2px solid honeydew;
   text-transform: uppercase;
-  padding: 5px 12px;
+  padding: 8px 12px;
   border-radius: 7px;
+  transform: translateY(-1px);
 }
 
 #special-button:hover {
