--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,7 +24,7 @@ html
           a(href=`/users/${user.id}` class='header-nav__link')
             div(class='header-nav__link-profile') Profile
           a(href='/logout' class='header-nav__link logout-button')
-            div(class="header-nav__link-sign-out" id='special-button') Sign Out
+            button(class="header-nav__link-sign-out" id='special-button') Sign Out
         else
           a(href='/login' class='header-nav__link')
             div(class='header-nav__link-sign-in') Sign In
