--- a/views/tee-times-create.pug
+++ b/views/tee-times-create.pug
@@ -9,7 +9,18 @@ include utils.pug
 block content
   +banner(
     'Create A New TeeTime',
-    'choose your favorite playstyle.'
+    'choose your favorite playstyle.',
   )
 
-  form(action)
+  form(action='/tee-times' method='post')
+    label(for='date') Date:
+    input(type='number' id='date' name='month' placeholder='MM')
+    input(type='number' name='day' placeholder='DD')
+    input(type='number' name='year' placeholder='YYYY')
+    label(for='time') Time:
+    input(id='time' type='umber')
+    select.city-selector(name='cityId')
+      each city in cities
+        option(value=city.id)= city.name
+    select.course-selector(name='courseId')
+      each 
