--- a/public/stylesheets/tee-times.css
+++ b/public/stylesheets/tee-times.css
@@ -6,3 +6,52 @@
     url(https://www.discoverybaygolfcourse.com/wp-content/uploads/sites/5191/2015/07/slide2.jpg);
 }
 
+.grid-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.grid-item__1 {
+  display: flex;
+  justify-content: left;
+}
+.grid-item__2 {
+  display: grid;
+  grid-template-areas:
+  "host" "course"
+  "playstyle" "price"
+  "description" "description"
+  "description" "description"
+  ;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 25% 25% 25% 25%;
+}
+.grid-item__3 {
+  display: flex;
+  justify-content: left;
+}
+
+.grid-event__details {
+  grid-area: description;
+  word-wrap: normal;
+}
+
+.grid-event__owner {
+  grid-area: host;
+}
+
+.grid-event__course {
+  grid-area: course;
+}
+
+.grid-event__play-style {
+  grid-area: playstyle;
+}
+
+.grid-event__price {
+  grid-area: price;
+}
