--- a/views/tee-times.pug
+++ b/views/tee-times.pug
@@ -6,7 +6,6 @@ append head
   link(rel='stylesheet' href='/stylesheets/tee-times.css')
 
 
-
 include utils.pug
 
 block content
@@ -16,9 +15,37 @@ block content
     '/tee-times/create',
     'Create A New TeeTime'
   )
-  if teeTimes
-    each teeTime in teeTimes
-      .teeTime-container
-        h2 #{teeTimes.dateTime}
+  //- if teeTimes
+  //-   each teeTime in teeTimes
+  //-     .teeTime-container
+  //-       h2 #{teeTimes.dateTime}
   each teeTime in teeTimes
-    h2 #{teeTime.dateTime}
+    .grid-container
+      .grid-item__1
+        h2 #{teeTime.dateTime}
+      .grid-item__2
+        .grid-event__details
+          h2 #{teeTime.description}
+        .grid-event__course
+          h2 #{teeTime.Course.name}
+        .grid-event__numPlayers
+          h2 Number of players: #{teeTime.numPlayers}
+        .grid-event__owner
+          h2 #{teeTime.User.firstName} #{teeTime.User.lastName}
+        .grid-event__play-style
+          h2 #{teeTime.PlayStyle.name}
+        .grid-event__price
+          .min-price
+            h2 #{teeTime.Course.minPrice}
+          .max-price
+            h2 #{teeTime.Course.maxPrice}
+      .grid-item__3
+        .grid-buttons
+          .grid-button__join
+            button Join
+          - var isOwner = (teeTime.ownerId === teeTime.User.id)
+          if (teeTime.ownerId = teeTime.User.id)
+            .grid-button__edit
+              button Edit
+            .grid-button__delete
+              button Delete
