--- a/public/stylesheets/tee-times.css
+++ b/public/stylesheets/tee-times.css
@@ -9,15 +9,17 @@
 .grid-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   align-items: center;
   padding: 5px;
   border-radius: 3px;
+  border: 2px solid blaCK;
 }
 
 .grid-item__1 {
   display: flex;
   justify-content: left;
+  max-width: 200px;
 }
 .grid-item__2 {
   display: grid;
@@ -27,12 +29,14 @@
   "description" "description"
   "description" "description"
   ;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 50% 35%;
   grid-template-rows: 25% 25% 25% 25%;
+  justify-content: center;
 }
 .grid-item__3 {
   display: flex;
-  justify-content: left;
+  justify-content: right;
+
 }
 
 .grid-event__details {
