--- a/public/stylesheets/tee-times.css
+++ b/public/stylesheets/tee-times.css
@@ -12,26 +12,31 @@
   /* justify-content: space-evenly; */
   align-items: center;
   padding: 5px;
-  border-radius: 3px;
-  border: 2px solid blaCK;
+  border-radius: 8px;
+  box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 1);
+  border: 1px solid blaCK;
+  width: 800px;
+  margin: 15px auto;
+  background-color: rgb(255, 235, 165);
 }
 
 .grid-item__1 {
   display: flex;
-  justify-content: left;
+  justify-content: center;
   max-width: 200px;
 }
 .grid-item__2 {
   display: grid;
   grid-template-areas:
-  "host" "course"
-  "playstyle" "price"
-  "description" "description"
-  "description" "description"
+  "numPlayers course"
+  "playstyle price"
+  "description description"
+  "description description"
   ;
-  grid-template-columns: 50% 35%;
+  grid-template-columns: 50% 50%;
   grid-template-rows: 25% 25% 25% 25%;
   justify-content: center;
+  padding: 20px;
 }
 .grid-item__3 {
   display: flex;
@@ -42,20 +47,38 @@
 .grid-event__details {
   grid-area: description;
   word-wrap: normal;
+  padding: 10px;
 }
 
-.grid-event__owner {
-  grid-area: host;
+.grid-event__numPlayers {
+  grid-area: numPlayers;
+  padding: 10px;
 }
 
 .grid-event__course {
   grid-area: course;
+  padding: 10px;
 }
 
 .grid-event__play-style {
   grid-area: playstyle;
+  padding: 10px;
 }
 
 .grid-event__price {
   grid-area: price;
+  padding: 10px;
+}
+
+.grid-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-right: 15px;
+}
+
+.grid-button button {
+  padding: 8px 12px;
+  margin: 5px;
+  width: 100px;
 }
